fixed button and title spacing for blog page in mobile view.

--- a/sass/pages/blog.scss
+++ b/sass/pages/blog.scss
@@ -4,6 +4,7 @@
         height: 50vh;
         background-color: rgba(223, 223, 223, 0.7);
         position: absolute;
+        height: 75vh;
     }
     .blog-img{
         background-repeat: no-repeat;
@@ -17,6 +18,7 @@
         justify-content: center;
         align-items: center;
         padding: 0 15px;
+        height:75vh;
     }
     .blog-title {
         max-width: 284px;
